empty files added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>QUIZAPP</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="scipt.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
